--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -4,8 +4,9 @@ general {
 
     border_size = 2
 
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = $orange
+    col.inactive_border = $gray
 
     resize_on_border = false
 
