Обновлены настройки hyprland

--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -5,7 +5,7 @@ bind = SUPER, T, exec, ghostty
 bind = SUPER, B, exec, yandex-browser-stable
 bind = SUPER, A, exec, rofi -show drun
 bind = SUPER, P, pin
-bind = SUPER CTRL, ESCAPE, exit
+bind = SUPER CTRL, ESCAPE, exec, uwsm stop
 
 bind = SUPER, h, movefocus, l
 bind = SUPER, j, movefocus, d
