--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,5 +9,6 @@ source = ~/.config/hypr/configs/general.conf
 source = ~/.config/hypr/configs/keybinds.conf
 source = ~/.config/hypr/configs/input.conf
 source = ~/.config/hypr/configs/layouts.conf
+source = ~/.config/hypr/configs/misc.conf
 source = ~/.config/hypr/configs/monitors.conf
 source = ~/.config/hypr/configs/windowrules.conf
