--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -1,17 +1,11 @@
 general {
-    gaps_in = 5
-    gaps_out = 20
-
-    border_size = 2
-
-    # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    border_size = 3
+    gaps_in = 3
+    gaps_out = 10
     col.active_border = $orange
-    col.inactive_border = $gray
+    col.inactive_border = rgba(ffffff00)
 
-    resize_on_border = false
-
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
-
-    layout = dwindle
+    snap {
+      enabled = true
+    }
 }
