--- a/.config/hypr/configs/input.conf
+++ b/.config/hypr/configs/input.conf
@@ -5,11 +5,5 @@ input {
     kb_options = grp:alt_shift_toggle
     kb_rules =
 
-    follow_mouse = 1
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-
-    touchpad {
-        natural_scroll = false
-    }
+    numlock_by_default = true
 }
