Сделаны настройки Hyprland

--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -4,6 +4,7 @@ general {
     gaps_out = 10
     col.active_border = $orange
     col.inactive_border = rgba(ffffff00)
+    layout = master
 
     snap {
       enabled = true
