--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -3,9 +3,14 @@ bind = SUPER, S, togglesplit
 bind = SUPER, F, togglefloating
 bind = SUPER, T, exec, ghostty
 bind = SUPER, B, exec, yandex-browser-stable
-bind = SUPER, A, exec, rofi -show drun
+bind = SUPER, A, exec, ulauncher
 bind = SUPER, P, pin
+bind = SUPER, G, exec, wl-kbptr
 bind = SUPER CTRL, ESCAPE, exec, uwsm stop
+
+bind = SUPER ALT, X, exec, warpd --hint
+bind = SUPER ALT, C, exec, warpd --normal
+bind = SUPER ALT, G, exec, warpd --grid
 
 bind = SUPER, h, movefocus, l
 bind = SUPER, j, movefocus, d
