--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -6,6 +6,7 @@ bind = SUPER, B, exec, yandex-browser-stable
 bind = SUPER, A, exec, ulauncher
 bind = SUPER, P, pin
 bind = SUPER, G, exec, wl-kbptr
+bind = SUPER, O, exec, hyprctl dispatch overview:toggle
 bind = SUPER CTRL, ESCAPE, exec, uwsm stop
 
 bind = SUPER ALT, X, exec, warpd --hint
