--- a/.config/hypr/configs/input.conf
+++ b/.config/hypr/configs/input.conf
@@ -2,7 +2,7 @@ input {
     kb_layout = us,ru
     kb_variant =
     kb_model =
-    kb_options = grp:win_space_toggle
+    kb_options = grp:ctrls_toggle
     kb_rules =
 
     numlock_by_default = true
