--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -33,6 +33,7 @@ set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "christoomey/vim-tmux-navigator"
 set -g @plugin "tmux-plugins/tmux-resurrect"
 set -g @plugin "tmux-plugins/tmux-continuum"
+set -g @plugin "alexwforsythe/tmux-which-key"
 
 set -g @resurrect-capture-pane-contents "on"
 set -g @continuum-restore "on"
