Добавлено восстановление подсветки при выходе из ожидания

--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -10,5 +10,5 @@ listener {
 listener {
   timeout = 300
   on-timeout = hyprctl dispatch dpms standby
-  on-resume = hyprctl dispatch dpms on
+  on-resume = hyprctl dispatch dpms on && ddcutil setvcp 10 100
 }
