--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -4,6 +4,11 @@ set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
+set -g base-index 1
+set -g detach-on-destroy off
+set -g renumber-windows on
+set -g set-clipboard on
+
 unbind %
 bind | split-window -h
 unbind '"'
@@ -34,10 +39,9 @@ set -g @plugin "christoomey/vim-tmux-navigator"
 set -g @plugin "tmux-plugins/tmux-resurrect"
 set -g @plugin "tmux-plugins/tmux-continuum"
 set -g @plugin "alexwforsythe/tmux-which-key"
+set -g @plugin "TechnicalDC/tmux-ayu-theme"
 
 set -g @resurrect-capture-pane-contents "on"
 set -g @continuum-restore "on"
-
-set -g @plugin "TechnicalDC/tmux-ayu-theme"
 
 run "~/.config/tmux/plugins/tpm/tpm"
