--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -17,10 +17,10 @@ bind - split-window -v
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
-bind -r j resize-pane -D 5
-bind -r k resize-pane -U 5
-bind -r l resize-pane -R 5
-bind -r h resize-pane -L 5
+bind -r Down resize-pane -D 5
+bind -r Up resize-pane -U 5
+bind -r Right resize-pane -R 5
+bind -r Left resize-pane -L 5
 
 bind -r m resize-pane -Z
 
@@ -28,8 +28,8 @@ set -g mouse on
 
 set-window-option -g mode-keys vi
 
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-selection
 
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
