Hyprland теперь использует кастомные шрифты

--- a/.config/hypr/configs/input.conf
+++ b/.config/hypr/configs/input.conf
@@ -1,5 +1,6 @@
 input {
-    kb_layout = us,ru
+    # kb_layout = us,ru
+    kb_layout = custom_us,custom_ru
     kb_variant =
     kb_model =
     kb_options = grp:ctrls_toggle
