Обновлены настройки hyprland

--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -1,8 +1,9 @@
 bind = SUPER, Q, killactive
 bind = SUPER, S, togglesplit
-bind = SUPER, F, togglefloating
+bind = SUPER, V, togglefloating
+bind = SUPER, F, fullscreen
 bind = SUPER, T, exec, ghostty
-bind = SUPER, B, exec, yandex-browser-stable
+bind = SUPER, B, exec, firefox
 bind = SUPER, A, exec, ulauncher
 bind = SUPER, P, pin
 bind = SUPER, G, exec, wl-kbptr
