--- a/.config/hypr/configs/windowrules.conf
+++ b/.config/hypr/configs/windowrules.conf
@@ -1,2 +1,8 @@
 windowrule = suppressevent maximize, class:.*
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+windowrulev2 = float, title:Картинка в картинке
+windowrulev2 = size 30%, title:Картинка в картинке
+windowrulev2 = pin, title:Картинка в картинке
+windowrule = noinitialfocus, title:Картинка в картинке
+windowrulev2 = move 69.9% 69.9%, title:Картинка в картинке
