--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -4,7 +4,8 @@ general {
     gaps_out = 10
     col.active_border = $orange
     col.inactive_border = rgba(ffffff00)
-    layout = master
+    layout = dwindle
+    # layout = master
 
     snap {
       enabled = true
