--- a/xbk_symbols/custom_us.toml
+++ b/xbk_symbols/custom_us.toml
@@ -4,7 +4,7 @@ name8       = "custom"         # short Windows filename: no spaces, no special c
 locale      = "us"             # locale/language id
 variant     = "custom"         # layout variant id
 author      = "nobody"         # author name
-description = "custom QWERTY layout"
+description = "custom US layout"
 url         = "https://OneDeadKey.github.com/kalamine"
 version     = "0.0.1"
 geometry    = "ANSI"
@@ -14,14 +14,14 @@ full = '''
 │ ~   │ !   │ @   │ #   │ $   │ %   │ ^   │ &   │ *   │ (   │ )   │ _   │ +   ┃          ┃
 │ `   │ 1   │ 2   │ 3   │ 4   │ 5   │ 6   │ 7   │ 8   │ 9   │ 0   │ -   │ =   ┃ ⌫        ┃
 ┢━━━━━┷━━┱──┴──┬──┴──┬──┴──┬──┴──┬──┴──┬──┴──┬──┴──┬──┴──┬──┴──┬──┴──┬──┴──┬──┺━━┯━━━━━━━┩
-┃        ┃ Q   │ W   │ E   │ R   │ T   │ Y   │ U   │ I   │ O   │ P   │ { { │ } } │ |     │
-┃ ↹      ┃     │     │     │     │     │     │     │     │     │     │ [ [ │ ] ] │ \     │
+┃        ┃ Q   │ W   │ E   │ R   │ T   │ Y   │ U   │ I   │ O   │ P   │ {   │ }   │ |     │
+┃ ↹      ┃   ~ │   ` │   + │   = │     │   ' │   [ │   < │   > │   ] │ [   │ ]   │ \     │
 ┣━━━━━━━━┻┱────┴┬────┴┬────┴┬────┴┬────┴┬────┴┬────┴┬────┴┬────┴┬────┴┬────┴┲━━━━┷━━━━━━━┪
-┃         ┃ A   │ S   │ D   │ F   │ G   │ H   │ J   │ K   │ L   │ : : │ " " ┃            ┃
-┃ ⇬       ┃     │     │     │     │     │     │     │     │     │ ; ; │ ' ' ┃ ⏎          ┃
+┃         ┃ A   │ S   │ D   │ F   │ G   │ H   │ J   │ K   │ L   │ :   │ "   ┃            ┃
+┃ ⇬       ┃     │     │   _ │   - │     │   " │   ( │   { │   } │ ; ) │ '   ┃ ⏎          ┃
 ┣━━━━━━━━━┻━━┱──┴──┬──┴──┬──┴──┬──┴──┬──┴──┬──┴──┬──┴──┬──┴──┬──┴──┬──┴──┲━━┻━━━━━━━━━━━━┫
-┃            ┃ Z   │ X   │ C   │ V   │ B   │ N   │ M   │ < < │ > > │ ? ? ┃               ┃
-┃ ⇧          ┃     │     │     │     │     │     │     │ , , │ . . │ / / ┃ ⇧             ┃
+┃            ┃ Z   │ X   │ C   │ V   │ B   │ N   │ M   │ <   │ >   │ ?   ┃               ┃
+┃ ⇧          ┃     │   \ │   | │   / │     │   ; │   : │ , , │ . . │ /   ┃ ⇧             ┃
 ┣━━━━━━━┳━━━━┻━━┳━━┷━━━━┱┴─────┴─────┴─────┴─────┴─────┴─┲━━━┷━━━┳━┷━━━━━╋━━━━━━━┳━━━━━━━┫
 ┃       ┃       ┃       ┃                                ┃       ┃       ┃       ┃       ┃
 ┃ Ctrl  ┃ super ┃ Alt   ┃ ␣                              ┃ Alt   ┃ super ┃ menu  ┃ Ctrl  ┃
