--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -42,3 +42,5 @@ font-size = 10
 # # which is explained in the docs for that config option.
 # # Just for example:
 # resize-overlay-duration = 4s 200ms
+
+background-opacity = 0.8
