Изменен вызов wl-kbptr

--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -6,7 +6,7 @@ bind = SUPER, T, exec, ghostty
 bind = SUPER, B, exec, firefox
 bind = SUPER, A, exec, ulauncher
 bind = SUPER, P, pin
-bind = SUPER, G, exec, wl-kbptr
+bind = SUPER, G, exec, wl-kbptr -c ~/.config/wl-kbptr/config
 bind = SUPER, O, exec, hyprctl dispatch overview:toggle
 bind = SUPER CTRL, ESCAPE, exec, uwsm stop
 
