--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -3,7 +3,7 @@ bind = SUPER, S, togglesplit
 bind = SUPER, V, togglefloating
 bind = SUPER, F, fullscreen
 bind = SUPER, T, exec, ghostty
-bind = SUPER, B, exec, firefox
+bind = SUPER, B, exec, vivaldi
 bind = SUPER, A, exec, ulauncher
 bind = SUPER, P, pin
 bind = SUPER, G, exec, wl-kbptr -c ~/.config/wl-kbptr/config
