--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -4,11 +4,13 @@ bind = SUPER, V, togglefloating
 bind = SUPER, F, fullscreen
 bind = SUPER, T, exec, ghostty
 bind = SUPER, B, exec, vivaldi
+bind = SUPER ALT, B, exec, vivaldi --incognito
 bind = SUPER, A, exec, ulauncher
 bind = SUPER, P, pin
 bind = SUPER, G, exec, wl-kbptr -c ~/.config/wl-kbptr/config
 bind = SUPER, O, exec, hyprctl dispatch overview:toggle
 bind = SUPER CTRL, ESCAPE, exec, uwsm stop
+bind = SUPER CTRL, P, pseudo
 
 bind = SUPER ALT, X, exec, warpd --hint
 bind = SUPER ALT, C, exec, warpd --normal
