Hypr: Добавлено сочетание для вызова yazi, изменено переключение раскладки

--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -5,6 +5,7 @@ bind = SUPER, F, fullscreen
 bind = SUPER, T, exec, ghostty
 bind = SUPER, B, exec, vivaldi
 bind = SUPER ALT, B, exec, vivaldi --incognito
+bind = SUPER, Y, exec, ghostty -e yazi
 bind = SUPER, A, exec, ulauncher
 bind = SUPER, P, pin
 bind = SUPER, G, exec, wl-kbptr -c ~/.config/wl-kbptr/config
