--- a/.config/hypr/configs/input.conf
+++ b/.config/hypr/configs/input.conf
@@ -3,7 +3,7 @@ input {
     kb_layout = custom_us,custom_ru
     kb_variant =
     kb_model =
-    kb_options = grp:ctrls_toggle
+    kb_options = grp:alt_shift_toggle
     kb_rules =
 
     numlock_by_default = true
