--- a/.config/yazi/package.toml
+++ b/.config/yazi/package.toml
@@ -33,5 +33,20 @@ use = "yazi-rs/plugins:git"
 rev = "864a021"
 hash = "e0ada736ea676c2bbb3ec705a49526ef"
 
+[[plugin.deps]]
+use = "boydaihungst/restore"
+rev = "b7c3376"
+hash = "d9dbd61d8b814e74a5420dba1e4788c4"
+
+[[plugin.deps]]
+use = "TD-Sky/sudo"
+rev = "af70636"
+hash = "a94dcbe9266512806c677138e8591ddb"
+
+[[plugin.deps]]
+use = "MasouShizuka/projects"
+rev = "7037dd5"
+hash = "9a4524dc938af1d30f2d115be7b64900"
+
 [flavor]
 deps = []
