--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -23,3 +23,8 @@ prepend_fetchers = [
   { id = "git", name = "*", run = "git" },
   { id = "git", name = "*/", run = "git" },
 ]
+
+[mgr]
+ratio = [2, 4, 2]
+linemode = "size"
+show_hidden = true
