Hyprland: Изменен браузер

--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -3,8 +3,8 @@ bind = SUPER, S, togglesplit
 bind = SUPER, V, togglefloating
 bind = SUPER, F, fullscreen
 bind = SUPER, T, exec, ghostty
-bind = SUPER, B, exec, vivaldi
-bind = SUPER ALT, B, exec, vivaldi --incognito
+bind = SUPER, B, exec, yandex-browser-stable
+bind = SUPER ALT, B, exec, yandex-browser-stable --incognito
 bind = SUPER, Y, exec, ghostty -e yazi
 bind = SUPER, A, exec, ulauncher
 bind = SUPER, P, pin
