--- a/.config/hypr/configs/windowrules.conf
+++ b/.config/hypr/configs/windowrules.conf
@@ -1,8 +1,19 @@
 windowrule = suppressevent maximize, class:.*
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
+$pip_size = size 30%
+$pip_move = move 69.9% 69.9%
+
 windowrulev2 = float, title:Картинка в картинке
-windowrulev2 = size 30%, title:Картинка в картинке
+windowrulev2 = $pip_size, title:Картинка в картинке
 windowrulev2 = pin, title:Картинка в картинке
 windowrule = noinitialfocus, title:Картинка в картинке
-windowrulev2 = move 69.9% 69.9%, title:Картинка в картинке
+windowrulev2 = $pip_move, title:Картинка в картинке
+
+$seasonvar_title = ^(Сериал.*смотреть онлайн бесплатно!)$
+
+windowrulev2 = float, title:$seasonvar_title
+windowrulev2 = $pip_size, title:$seasonvar_title
+windowrulev2 = pin, title:$seasonvar_title
+windowrule = noinitialfocus, title:$seasonvar_title
+windowrulev2 = $pip_move, title:$seasonvar_title
