--- a/.config/hypr/configs/windowrules.conf
+++ b/.config/hypr/configs/windowrules.conf
@@ -11,9 +11,16 @@ windowrule = noinitialfocus, title:Картинка в картинке
 windowrulev2 = $pip_move, title:Картинка в картинке
 
 $seasonvar_title = ^(Сериал.*смотреть онлайн бесплатно!)$
+$youtube_title = ^(.* - YouTube)$
 
 windowrulev2 = float, title:$seasonvar_title
 windowrulev2 = $pip_size, title:$seasonvar_title
 windowrulev2 = pin, title:$seasonvar_title
 windowrule = noinitialfocus, title:$seasonvar_title
 windowrulev2 = $pip_move, title:$seasonvar_title
+
+windowrulev2 = float, title:$youtube_title
+windowrulev2 = $pip_size, title:$youtube_title
+windowrulev2 = pin, title:$youtube_title
+windowrule = noinitialfocus, title:$youtube_title
+windowrulev2 = $pip_move, title:$youtube_title
