--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -1,30 +1,17 @@
-[plugin]
-prepend_previewers = [
-  { mime = "application/bittorrent", run = "torrent-preview" },
-
-  # Office Documents
-  { mime = "application/openxmlformats-officedocument.*", run = "office" },
-  { mime = "application/oasis.opendocument.*", run = "office" },
-  { mime = "application/ms-*", run = "office" },
-  { mime = "application/msword", run = "office" },
-  { name = "*.docx", run = "office" },
-]
-
-prepend_preloaders = [
-  # Office Documents
-  { mime = "application/openxmlformats-officedocument.*", run = "office" },
-  { mime = "application/oasis.opendocument.*", run = "office" },
-  { mime = "application/ms-*", run = "office" },
-  { mime = "application/msword", run = "office" },
-  { name = "*.docx", run = "office" },
-]
-
-prepend_fetchers = [
-  { id = "git", name = "*", run = "git" },
-  { id = "git", name = "*/", run = "git" },
-]
-
 [mgr]
-ratio = [2, 4, 2]
+ratio = [1, 4, 3]
 linemode = "size"
 show_hidden = true
+
+[opener]
+edit = [{ run = '$EDITOR "$@"', block = true }]
+
+[[plugin.prepend_fetchers]]
+id = "git"
+name = "*"
+run = "git"
+
+[[plugin.prepend_fetchers]]
+id = "git"
+name = "*/"
+run = "git"
