--- a/.config/yazi/package.toml
+++ b/.config/yazi/package.toml
@@ -1,27 +1,12 @@
 [[plugin.deps]]
-use = "kirasok/torrent-preview"
-rev = "4ca5996"
-hash = "6af40ce6b2cd849b5fa32de04a598b06"
-
-[[plugin.deps]]
-use = "macydnah/office"
-rev = "d1e3e51"
-hash = "35241f7d85abc5a0d2441020bc597ceb"
-
-[[plugin.deps]]
-use = "DreamMaoMao/easyjump"
-rev = "6606fb1"
-hash = "9209d17be3c792eda9ad60b447c4db1e"
-
-[[plugin.deps]]
-use = "yazi-rs/plugins:mount"
-rev = "864a021"
-hash = "dd97eede8e20e59cd2604e8006e470e2"
-
-[[plugin.deps]]
 use = "yazi-rs/plugins:full-border"
-rev = "864a021"
-hash = "1f3dad061209081a6b04dd6ff2cb06c7"
+rev = "3d1efb7"
+hash = "3996fc74044bc44144b323686f887e1"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:chmod"
+rev = "3d1efb7"
+hash = "a030fe48d91b04341ad2fba9be957df"
 
 [[plugin.deps]]
 use = "Lil-Dank/lazygit"
@@ -29,24 +14,29 @@ rev = "7a08a09"
 hash = "a1fa2b3e1826c3a34804ea8c548e9f80"
 
 [[plugin.deps]]
-use = "yazi-rs/plugins:git"
-rev = "864a021"
-hash = "e0ada736ea676c2bbb3ec705a49526ef"
-
-[[plugin.deps]]
-use = "boydaihungst/restore"
-rev = "b7c3376"
-hash = "d9dbd61d8b814e74a5420dba1e4788c4"
-
-[[plugin.deps]]
 use = "TD-Sky/sudo"
 rev = "af70636"
 hash = "a94dcbe9266512806c677138e8591ddb"
 
 [[plugin.deps]]
-use = "MasouShizuka/projects"
-rev = "7037dd5"
-hash = "9a4524dc938af1d30f2d115be7b64900"
+use = "yazi-rs/plugins:git"
+rev = "3d1efb7"
+hash = "e01006bfb38951ea89031bd918b20dbb"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:mount"
+rev = "3d1efb7"
+hash = "b3f1d6ec3721d4061aad5f69cddb0cf9"
+
+[[plugin.deps]]
+use = "DreamMaoMao/easyjump"
+rev = "6606fb1"
+hash = "9209d17be3c792eda9ad60b447c4db1e"
+
+[[plugin.deps]]
+use = "boydaihungst/restore"
+rev = "97ebcc3"
+hash = "f997349417b30488a8ccd0e64d476bd8"
 
 [flavor]
 deps = []
