Обновлены настройки hyprland

--- a/.config/hypr/configs/windowrules.conf
+++ b/.config/hypr/configs/windowrules.conf
@@ -12,6 +12,7 @@ windowrulev2 = $pip_move, title:Картинка в картинке
 
 $seasonvar_title = ^(Сериал.*смотреть онлайн бесплатно!)$
 $youtube_title = ^(.* - YouTube)$
+$tape_operator = ^(.*\| Tape Operator)$
 
 windowrulev2 = float, title:$seasonvar_title
 windowrulev2 = $pip_size, title:$seasonvar_title
@@ -24,3 +25,9 @@ windowrulev2 = $pip_size, title:$youtube_title
 windowrulev2 = pin, title:$youtube_title
 windowrule = noinitialfocus, title:$youtube_title
 windowrulev2 = $pip_move, title:$youtube_title
+
+windowrulev2 = float, title:$tape_operator
+windowrulev2 = $pip_size, title:$tape_operator
+windowrulev2 = pin, title:$tape_operator
+windowrule = noinitialfocus, title:$tape_operator
+windowrulev2 = $pip_move, title:$tape_operator
