--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -2,13 +2,13 @@ general {
 }
 
 listener {
-  timeout = 600
-  on-timeout = ddcutil setvcp 10 0
-  on-resume = ddcutil setvcp 10 100
+  timeout = 150
+  on-timeout = python3 /home/$USER/.config/hypr/scripts/brightness_save.py
+  on-resume = python3 /home/$USER/.config/hypr/scripts/brightness_restore.py
 }
 
-listener {
-  timeout = 900
-  on-timeout = hyprctl dispatch dpms standby
-  on-resume = hyprctl dispatch dpms on && ddcutil setvcp 10 100
-}
+# listener {
+#   timeout = 900
+#   on-timeout = hyprctl dispatch dpms standby
+#   on-resume = hyprctl dispatch dpms on && ddcutil setvcp 10 100
+# }
