--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -6,11 +6,11 @@ bind = SUPER, T, exec, ghostty
 bind = SUPER, B, exec, yandex-browser-stable
 bind = SUPER ALT, B, exec, yandex-browser-stable --incognito
 bind = SUPER, Y, exec, ghostty -e yazi
-bind = SUPER, A, exec, ulauncher
+bind = SUPER, A, exec, ~/.config/rofi/launchers/type-7/launcher.sh
 bind = SUPER, P, pin
 bind = SUPER, G, exec, wl-kbptr -c ~/.config/wl-kbptr/config
 bind = SUPER, O, exec, hyprctl dispatch overview:toggle
-bind = SUPER CTRL, ESCAPE, exec, uwsm stop
+bind = SUPER CTRL, ESCAPE, exec, ~/.config/rofi/powermenu/type-1/powermenu.sh
 bind = SUPER CTRL, P, pseudo
 
 bind = SUPER ALT, X, exec, warpd --hint
@@ -63,8 +63,8 @@ bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 # bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, ddcutil setvcp 10 + 20
-bindel = ,XF86MonBrightnessDown, exec, ddcutil setvcp 10 - 20
+bindel = ,XF86MonBrightnessUp, exec, ddcutil setvcp 10 + 10
+bindel = ,XF86MonBrightnessDown, exec, ddcutil setvcp 10 - 10
 
 # bindl = , XF86AudioNext, exec, playerctl next
 # bindl = , XF86AudioPause, exec, playerctl play-pause
