Обновлены символы клавиатуры

--- a/xbk_symbols/custom_ru.toml
+++ b/xbk_symbols/custom_ru.toml
@@ -4,7 +4,7 @@ name8 = "custom"                               # short Windows filename: no spac
 locale = "ru"                                  # locale/language id
 variant = "custom"                             # layout variant id
 author = "nobody"                              # author name
-description = "custom RU layout"
+description = "Russian"
 url = "https://OneDeadKey.github.com/kalamine"
 version = "0.0.1"
 geometry = "ANSI"
