--- a/xbk_symbols/custom_us.toml
+++ b/xbk_symbols/custom_us.toml
@@ -4,7 +4,7 @@ name8 = "custom"                               # short Windows filename: no spac
 locale = "us"                                  # locale/language id
 variant = "custom"                             # layout variant id
 author = "nobody"                              # author name
-description = "custom US layout"
+description = "English (US)"
 url = "https://OneDeadKey.github.com/kalamine"
 version = "0.0.1"
 geometry = "ANSI"
