Обновлены настройки fish, ghostty, hyprland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,6 +5,8 @@
 # OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 # #######################################################################################
 
+exec-once = systemctl --user start hyprpolkitagent
+
 
 # This is an example Hyprland config file.
 # Refer to the wiki for more information.
@@ -23,7 +25,8 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+# monitor=,preferred,auto,auto
+monitor=DP-1,1920x1080,0x0,1
 
 
 ###################
