--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -19,8 +19,6 @@
 # ==========================
 # # The config file consists of simple key-value pairs,
 # # separated by equals signs.
-# font-family = Iosevka
-font-size = 9
 # window-padding-x = 2
 #
 # # Spacing around the equals sign does not matter.
@@ -42,3 +40,15 @@ font-size = 9
 # # which is explained in the docs for that config option.
 # # Just for example:
 # resize-overlay-duration = 4s 200ms
+
+background-opacity = 0.9
+
+font-family = JetBrainsMono Nerd Font
+font-style = SemiBold
+font-size = 10
+
+keybind = ctrl+a=select_all
+keybind = ctrl+c=copy_to_clipboard
+keybind = ctrl+v=paste_from_clipboard
+keybind = ctrl+w=close_tab
+
