--- a/.config/hypr/configs/keybindings.conf
+++ b/.config/hypr/configs/keybindings.conf
@@ -8,6 +8,7 @@ bind = SUPER, P, pin
 
 bind = SUPER, T, exec, $terminal 
 bind = SUPER, B, exec, $browser 
+bind = SUPER, G, exec, wl-kbptr
 bind = SUPER ALT, B, exec, $browser --incognito 
 bind = SUPER, A, exec, ~/.config/rofi/launchers/type-1/launcher.sh
 bind = SUPER, ESCAPE, exec, ~/.config/rofi/powermenu/type-1/powermenu.sh
